refactor: migrate PictureUploadedEvent to domain/events/